fix keyboard too small

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-html { height: 100%; }
-body { height: 100%; margin: 0; }
-#svg { width: 3140px; height: 80% }
+html { height: 100% }
+body { height: 100%; margin: 0 }
+main { width: 100%; height: 80%; overflow-x: auto }
+#svg { width: 3140px; height: 100% }
 .key {
   stroke: black;
   stroke-width: 2px;
